--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<style>
 		.container{position: relative;width: 1250px;height: 450px;overflow: hidden;background: #eee;}
 		.focus{position: relative;width: 1250px;height: 450px;margin: 0 auto;}
-		.focus ul li{position: absolute;width: 800px;height: 450px;overflow: hidden;}
+		.focus ul li{position: absolute;width: 800px;height: 450px;overflow: hidden;transition: all 1s;}
 		.focus ul li img{width: 100%;}
 		.arr{position: absolute;top: 50%;margin-top: -64px;width: 128px;height: 128px;display: block;z-index: 100;}
 		.prev{left: 0;background: url(images/prev.png) 0 0 no-repeat;}
