--- a/index.html
+++ b/index.html
@@ -5,50 +5,92 @@
 	<title>rotateFocus</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<style>
-		.container{position: relative;width: 1250px;height: 450px;overflow: hidden;background: #eee;}
-		.focus{position: relative;width: 1250px;height: 450px;margin: 0 auto;}
-		.focus ul li{position: absolute;width: 800px;height: 450px;overflow: hidden;transition: all 1s;}
-		.focus ul li img{width: 100%;}
+		.container{position: relative;width: 1250px;height: 450px;overflow: hidden;}
+		.container ul li{position: absolute;width: 800px;height: 450px;overflow: hidden;transition: all 0.5s;cursor: pointer;}
+		.container ul li img{width: 100%;}
 		.arr{position: absolute;top: 50%;margin-top: -64px;width: 128px;height: 128px;display: block;z-index: 100;}
-		.prev{left: 0;background: url(images/prev.png) 0 0 no-repeat;}
-		.next{right: 0;background: url(images/next.png) 0 0 no-repeat;}
+		.prev{left: 0;background: rgba(0,0,0,.5) url(images/prev.png) 0 0 no-repeat;}
+		.next{right: 0;background: rgba(0,0,0,.5) url(images/next.png) 0 0 no-repeat;}
 	</style>
 </head>
 <body>
 
-<div class="container">
-	<div class="focus" id="focus">
-		<ul>
-			<li><img src="images/1.jpg" alt="" /></li>
-			<li><img src="images/2.jpg" alt="" /></li>
-			<li><img src="images/3.jpg" alt="" /></li>
-			<li><img src="images/4.jpg" alt="" /></li>
-			<li><img src="images/5.jpg" alt="" /></li>
-			<li><img src="images/6.jpg" alt="" /></li>
-			<li><img src="images/7.jpg" alt="" /></li>
-		</ul>
-	</div>
+<div class="container" id="focus">
+	<ul>
+		<li><img src="images/5.jpg" alt="" /></li>
+		<li><img src="images/2.jpg" alt="" /></li>
+		<li><img src="images/3.jpg" alt="" /></li>
+		<li><img src="images/4.jpg" alt="" /></li>
+		<li><img src="images/1.jpg" alt="" /></li>
+		<li><img src="images/6.jpg" alt="" /></li>
+		<li><img src="images/7.jpg" alt="" /></li>
+	</ul>
 	<a href="javascript:;" class="arr prev" id="prev"></a>
 	<a href="javascript:;" class="arr next" id="next"></a>
 </div>
 
+<!-- <div class="container" id="focus2">
+	<ul>
+		<li><img src="images/5.jpg" alt="" /></li>
+		<li><img src="images/2.jpg" alt="" /></li>
+		<li><img src="images/3.jpg" alt="" /></li>
+		<li><img src="images/4.jpg" alt="" /></li>
+		<li><img src="images/1.jpg" alt="" /></li>
+	</ul>
+	<a href="javascript:;" class="arr prev" id="prev"></a>
+	<a href="javascript:;" class="arr next" id="next"></a>
+</div>
+
+<div class="container" id="focus3">
+	<ul>
+		<li><img src="images/5.jpg" alt="" /></li>
+		<li><img src="images/2.jpg" alt="" /></li>
+		<li><img src="images/3.jpg" alt="" /></li>
+		<li><img src="images/4.jpg" alt="" /></li>
+		<li><img src="images/1.jpg" alt="" /></li>
+		<li><img src="images/6.jpg" alt="" /></li>
+		<li><img src="images/7.jpg" alt="" /></li>
+		<li><img src="images/4.jpg" alt="" /></li>
+		<li><img src="images/1.jpg" alt="" /></li>
+		<li><img src="images/6.jpg" alt="" /></li>
+		<li><img src="images/7.jpg" alt="" /></li>
+	</ul>
+	<a href="javascript:;" class="arr prev" id="prev"></a>
+	<a href="javascript:;" class="arr next" id="next"></a>
+</div> -->
 
 <script src="js/script.js"></script>
 <script>
 var focus = document.getElementById("focus");
-var prev = document.getElementById("prev");
-var next = document.getElementById("next");
+var focus2 = document.getElementById("focus2");
+var focus3 = document.getElementById("focus3");
 
-var focus = new RotateFocus({
-	focus: focus,
-	prev: prev,
-	next: next,
+rotate(focus, {
 	width: 1250,
 	height: 450,
 	carrouselWidth: 800,
 	carrouselHeight: 450,
-	scale: 0.9
+	verticalAlign: 'top',
+	isOpacity: false
 })
+// rotate(focus2, {
+// 	width: 1250,
+// 	height: 450,
+// 	carrouselWidth: 800,
+// 	carrouselHeight: 450,
+// 	autoPlay: true,
+// 	interval: 2000,
+// 	scale: 0.7
+// })
+// rotate(focus3, {
+// 	width: 1250,
+// 	height: 450,
+// 	carrouselWidth: 800,
+// 	carrouselHeight: 450,
+// 	verticalAlign: 'bottom',
+// 	isOpacity: false
+// })
+
 </script>
 </body>
 </html>
