--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<style>
 		.container{position: relative;width: 1250px;height: 450px;overflow: hidden;}
-		.container ul li{position: absolute;width: 800px;height: 450px;overflow: hidden;transition: all 0.5s;cursor: pointer;}
+		.container ul li{position: absolute;width: 800px;height: 450px;overflow: hidden;
+			/*transition: all 0.5s;*/
+			cursor: pointer;}
 		.container ul li img{width: 100%;}
 		.arr{position: absolute;top: 50%;margin-top: -64px;width: 128px;height: 128px;display: block;z-index: 100;}
 		.prev{left: 0;background: rgba(0,0,0,.5) url(images/prev.png) 0 0 no-repeat;}
